<resources>
    <string name="app_name">真约</string>

    <!--  登录模块 -->
    <string name="login">登录</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="china">中国</string>
    <string name="input_phone_number">填写手机号码</string>
    <string name="phone_area">+86</string>
    <string name="password">密码</string>
    <string name="input_password">填写密码</string>
    <string name="loginby_encounter_problems">忘记密码?</string>

    <!-- 注册 -->
    <string name="signup">注册</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">发送验证码</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname">输入昵称</string>
    <string name="gender">性别</string>
    <string name="birth_year">出生年份</string>
    <string name="invite_code">邀请码</string>
    <string name="input_invite_code">输入邀请码</string>

    <!-- 修改密码 -->
    <string name="im_change_password">修改密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_confirm_password">请再次输入新密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="old_password">旧密码</string>
    <string name="input_old_password">请填写旧密码</string>
    <string name="change_password_processing">正在处理中&#8230;</string>
    <string name="id_name">真约号</string>
    <string name="id_name_format">真约号: %d</string>

    <!-- 重置密码-->
    <string name="reset_password">重置密码</string>

    <!-- tab name -->
    <string name="tab_msg">聊天</string>
    <string name="tab_contacts">好友</string>
    <string name="tab_found">发现</string>
    <string name="tab_profile">我的</string>

    <!-- 我的 -->
    <string name="im_settings_new_msg">新消息通知</string>
    <string name="im_settings_sys_msg">系统广播</string>
    <string name="im_settings_privacy">隐私</string>
    <string name="im_settings_about">关于真约</string>
    <string name="im_settings_logout">退出登录</string>
    <string name="my_coins">我的缘币</string>
    <string name="coins_detail">缘币明细</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_friend_msg">给大家推荐一款实名制免费相亲交友APP, 实时与TA聊天交流、真实直接，输入邀请码%s免费注册可获赠100缘币，马上下载注册吧！</string>

    <!--我的个人信息-->
    <string name="im_personal_info">个人信息</string>
    <string name="header_pic">头像</string>
    <string name="qr_code_card">我的二维码</string>
    <string name="my_location">我的地址</string>
    <string name="not_fill">未填写</string>
    <string name="area">国家/地区</string>
    <string name="edit_nickname">设置昵称</string>
    <string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
    <string name="save">保存</string>
    <string name="personal_header">个人头像</string>
    <string name="edit_gender">设置性别</string>

    <string name="gender_male">男</string>
    <string name="gender_female">女</string>

    <!-- 更多 -->
    <string name="personal_height">身高</string>
    <string name="personal_weight">体重</string>
    <string name="personal_wage">月薪</string>
    <string name="personal_education">学历</string>
    <string name="personal_marriage">婚况</string>
    <string name="personal_workarea">工作地区</string>
    <string name="personal_birthplace">籍贯</string>
    <string name="personal_residence">户口在地</string>
    <string name="personal_introduce">自我简介</string>
    <string name="personal_signature">个性签名</string>
    <string name="personal_demand">择友要求</string>
    <string name="personal_hobby">兴趣爱好</string>
    <string name="personal_car">购车情况</string>
    <string name="personal_house">住房情况</string>
    <string name="edit_signature">设置个性签名</string>
    <string name="edit_introduce">设置自我简介</string>
    <string name="edit_demand">设置择友要求</string>
    <string name="edit_hobby">设置兴趣爱好</string>
    <string name="personal_career">职业</string>
    <string name="personal_industry">行业</string>


    <!-- msg menu -->
    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>

    <!--用户信息-->
    <string name="personal_details">详细资料</string>
    <string name="my_chat_account">微信号:%1$s</string>
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="pass_validation">通过验证</string>
    <string name="label_has_more_user_info">更多信息</string>
    <string name="label_no_more_user_info">这家伙很懒，什么都没填写</string>

    <string name="search">搜索</string>
    <string name="group_chat">群聊</string>
    <string name="new_friend">新的朋友</string>
    <string name="label_new_contact_reach_top">添加好友数量已达到%d人，无法继续添加</string>

    <!-- 发现页面 -->
    <string name="discovery_nearby_users">附近的人</string>
    <string name="discovery_lover">找恋人</string>
    <string name="discovery_hobby">找玩伴</string>
    <string name="discovery_birthplace">找老乡</string>
    <string name="discovery_search_user">综合搜索会员</string>
    <string name="filter_confirm">确定</string>
    <string name="discovery_meeting">聚会活动</string>
    <string name="discovery_search_group">找群组</string>

    <!-- 联系人 -->
    <string name="contacts_recently">最近</string>
    <string name="contacts_hotlist">好友</string>
    <string name="contacts_block">黑名单</string>

    <!-- 关于 -->
    <string name="function_introduction">真约简介</string>
    <string name="user_feedback">用户反馈</string>
    <string name="check_update">检查更新</string>
    <string name="terms_of_use_and_privacy_policy">使用条款和隐私政策</string>

    <string name="recent_chat_type_voice">[语音]</string>
    <string name="recent_chat_type_file">[文件]</string>
    <string name="recent_chat_type_url">[链接]</string>
    <string name="recent_chat_type_pic">[图片]</string>
    <string name="recent_chat_type_fire">[阅后即焚]</string>
    <string name="recent_chat_type_location">[位置]</string>
    <string name="recent_chat_type_recommend">[推荐好友]</string>
    <string name="identity_authentication">身份认证</string>

    <!-- 群信息界面 -->

    <string name="label_btn_quit_group">退出群聊</string>
    <string name="label_btn_dismiss_group">解散群聊</string>

    <!-- 用户反馈 -->
    <string name="feedback_tips">请添加问题描述,并大于3个字符</string>
    <string name="feedback_loading">正在提交反馈...</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_problem">问题描述(必填)</string>
    <string name="feedback_problem_hint">请描述您遇到的问题</string>
    <string name="feedback_problem_image">上传问题截图(选填)</string>

    <!-- 举报用户-->
    <string name="report_user">举报</string>
    <string name="report_user_tips">请添举报内容,并大于3个字符</string>
    <string name="report_user_loading">正在提交举报内容...</string>
    <string name="report_user_problem">举报内容(必填)</string>
    <string name="report_user_hint">请描述举报内容</string>
    <string name="report_user_image">上传举报截图(选填)</string>

    <!-- 申请加群 -->
    <string name="title_join_group">申请入群</string>

</resources>
