<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="#ff232325">

        <ImageView
            android:id="@+id/title_btn_back"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_login_spinner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/countries_and_areas"
            android:textColor="#353535"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:text="@string/china"
            android:textColor="#45c01a"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="bottom"
            android:background="#dbdbdb" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_username"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:text="@string/phone_area"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_verification_code"
            android:inputType="phone"
            android:maxLength="4"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_code"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/verification_code"
            android:textColor="#353535"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_login"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/get_verification_code"
            android:textColor="@color/im_account_button_txt_color"
            android:textSize="12sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_password"
            android:paddingLeft="90dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_password"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/password"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/input_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_nickname"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_nickname"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/nickname"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/btn_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/ic_login_spinner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="17dp"
                android:text="@string/gender"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/input_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:text="@string/gender_male"
                android:textColor="#45c01a"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="#dbdbdb" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_birth_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@drawable/ic_login_spinner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/birth_year"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/input_birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:text="1990"
                android:textColor="#45c01a"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="#dbdbdb" />
        </FrameLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/input_invite_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_invite_code"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_invite_code"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/invite_code"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_login"
        android:enabled="false"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/signup"
        android:textColor="@color/im_account_button_txt_color"
        android:textSize="18sp" />

</LinearLayout>