<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="#ff232325">

        <ImageView
            android:id="@+id/title_btn_back"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_username"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/phone_area"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_verification_code"
            android:inputType="phone"
            android:maxLength="4"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_code"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/verification_code"
            android:textColor="#353535"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_login"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/get_verification_code"
            android:textColor="@color/im_account_button_txt_color"
            android:textSize="12sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/input_password"
            android:paddingLeft="90dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/input_password"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/password"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_btn_login"
        android:enabled="false"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/reset_password"
        android:textColor="@color/im_account_button_txt_color"
        android:textSize="18sp" />

</LinearLayout>