<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="#ff232325">

        <ImageView
            android:id="@+id/title_btn_back"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_gender"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/save"
            android:textColor="#ffffff" />
    </FrameLayout>

    <TextView
        android:id="@+id/btn_gender_male"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/im_setting_item"
        android:focusable="false"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/gender_male"
        android:textColor="#000000"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dip"
        android:background="#ffeeeeee" />

    <TextView
        android:id="@+id/btn_gender_female"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/im_setting_item"
        android:focusable="false"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/gender_female"
        android:textColor="#000000"
        android:textSize="16sp" />


</LinearLayout>